Added Snake growth and ability to eat food to grow